--- a/ElementaryOperations.ipynb
+++ b/ElementaryOperations.ipynb
@@ -286,7 +286,7 @@
    "source": [
     "## Matrix Transpose\n",
     "\n",
-    "Not working, look through this later."
+    "Now working."
    ]
   },
   {
