define index variable in kernel

--- a/ElementaryOperations.ipynb
+++ b/ElementaryOperations.ipynb
@@ -254,21 +254,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "38c8cd0b-bc2a-4fd7-aa1a-ea43849f0b61",
+   "metadata": {},
+   "source": [
+    "## Element Wise Add"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5d0f3f0b-cd10-4ebc-a679-6fee101284c9",
+   "execution_count": 26,
+   "id": "f9bbab8b-2d35-4f3b-a1ea-e2db579ace50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "__global__ void MatEleMul(float* A, float* B, float *C, int width, int height){\n",
-    "    int x = threadIdx.x + blockDim.x * blockIdx.x;\n",
-    "    int y = threadIdx.y + blockDim.y * blockIdx.y;\n",
-    "    \n",
-    "    if(x < width && y < height){\n",
-    "        C[y * width + x] = A[y * width + x] * B[y * width + x];\n",
-    "    }\n",
-    "}"
+    "element_add = context.getSourceModule(element_multiplication_kernel_path).get_function('MatEleAdd')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5738c7ca-562f-49a1-aa76-021f272dcdbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.random.randint(5, size=(490000, 49))\n",
+    "b = np.random.randint(5, size=(490000, 49))\n",
+    "c_python = a + b\n",
+    "\n",
+    "c = np.zeros((a.shape[0], b.shape[1])).astype(np.float32)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "3ab439e5-70a6-430f-8cfc-de24237f8a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correct:  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = a.astype(np.float32)\n",
+    "b = b.astype(np.float32)\n",
+    "\n",
+    "a_d = gpuarray.to_gpu(a)\n",
+    "b_d = gpuarray.to_gpu(b)\n",
+    "c_d = gpuarray.to_gpu(c)\n",
+    "\n",
+    "\n",
+    "block = context.block_dims\n",
+    "grid = context.grid_dims(max([a.shape[0], b.shape[1]]))\n",
+    "\n",
+    "element_add(a_d, b_d, c_d, np.int32(a.shape[0]), np.int32(a.shape[1]), block=block, grid=grid)\n",
+    "\n",
+    "c = c_d.get()\n",
+    "\n",
+    "print(\"Correct: \", np.allclose(c, c_python))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1acf4f68-7b98-4239-8bfb-7433b5c205f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
