--- a/NMF_GPU.ipynb
+++ b/NMF_GPU.ipynb
@@ -7,20 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.context import Context\n",
+    "import numpy as np\n",
     "\n",
-    "BLOCK_SIZE = 32\n",
-    "context = Context(BLOCK_SIZE)\n",
+    "from utils.loss_functions import euclidean_loss\n",
     "\n",
-    "matrix_multiplication_kernel_path = './kernels/MatrixMultiplication.cu'\n",
-    "matrix_transpose_kernel_path = './kernels/MatrixTranspose.cu'\n",
-    "element_multiplication_kernel_path = './kernels/ElementWise.cu'\n",
-    "\n",
-    "kernel_paths = [matrix_multiplication_kernel_path, \n",
-    "                matrix_transpose_kernel_path,\n",
-    "                element_multiplication_kernel_path]\n",
-    "\n",
-    "source_module = context.getSourceModule(kernel_paths, multiple_kernels=True)"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -30,16 +22,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "matmul = source_module.get_function('MatMul')\n",
-    "mattran = source_module.get_function('MatTran')\n",
-    "matmulel = source_module.get_function('MatEleMul')\n",
-    "matadd = source_module.get_function('MatEleAdd')\n"
+    "N = 3012 #number of words\n",
+    "M = 8447 #number of articles\n",
+    "X = np.zeros((N, M)) #define the original data matrix\n",
+    "K = 25 #number of categories (matrix rank)\n",
+    "\n",
+    "\n",
+    "W = np.random.uniform(1, 2, (N, K)) #initialize W and H to random values between 1 and 2\n",
+    "H = np.random.uniform(1, 2, (K, M))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6502bbb9-8a5f-4a74-b51c-0881d9ff4103",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W x H matches NumPy:  True\n",
+      "X - WH matches NumPy:  True\n",
+      "(X - WH)^2 matches NumPy:  True\n",
+      "sum((X - WH)^2) matches NumPy:  True\n",
+      "80608000000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss = euclidean_loss(X, W, H, compare_to_numpy=True)\n",
+    "\n",
+    "print(loss)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6502bbb9-8a5f-4a74-b51c-0881d9ff4103",
+   "id": "0dbd476c-d2cf-4d9d-b188-4919cfafc8b3",
    "metadata": {},
    "outputs": [],
    "source": []
