--- a/NMF_GPU.ipynb
+++ b/NMF_GPU.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "9af79075-ee8f-4768-84a1-39125a7a73dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "from utils.loss_functions import euclidean_loss\n",
+    "from utils.loss_functions import euclidean_loss, euclidean_loss_numpy\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -17,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "da3ae475-9838-4bbf-997c-eab0f9c82f0e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "6502bbb9-8a5f-4a74-b51c-0881d9ff4103",
    "metadata": {},
    "outputs": [
@@ -42,18 +51,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "W x H matches NumPy:  True\n",
-      "X - WH matches NumPy:  True\n",
-      "(X - WH)^2 matches NumPy:  True\n",
-      "sum((X - WH)^2) matches NumPy:  True\n",
-      "80608000000.0\n"
+      "1029.573678970337 226.35459899902344\n"
      ]
     }
    ],
    "source": [
-    "loss = euclidean_loss(X, W, H, compare_to_numpy=True)\n",
+    "loss, parallel_time = euclidean_loss(X, W, H, return_time=True)\n",
+    "loss, sequential_time = euclidean_loss_numpy(X, W, H, return_time=True)\n",
     "\n",
-    "print(loss)"
+    "print(parallel_time, sequential_time)"
    ]
   },
   {
