--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "4d1b863d-ca31-4877-b4a6-2ad7a86795db",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
      "text": [
       "/home/alexangus/envs/cudaEnv/lib/python3.6/site-packages/sklearn/decomposition/_nmf.py:1091: ConvergenceWarning: Maximum number of iterations 100 reached. Increase it to improve convergence.\n",
       "  \" improve convergence.\" % max_iter, ConvergenceWarning)\n",
-      "Trained in 14.875048160552979 s\n",
+      "Trained in 15.377400636672974 s\n",
       "         Topic_1           Topic_2  ...       Topic_24          Topic_25\n",
       "0   0.0239 thing  0.1837 yesterday  ...   0.0109 serve     0.0450 school\n",
       "1     0.0136 ask      0.0195 close  ...     0.0104 add    0.0362 student\n",
@@ -30,12 +30,12 @@
     }
    ],
    "source": [
-    "!python ./serial_sqr_sklearn.py"
+    "!python ./src/serial_sqr_sklearn.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "id": "796103ae-8ede-4985-89ac-649c42eba9c6",
    "metadata": {},
    "outputs": [
@@ -44,39 +44,30 @@
      "output_type": "stream",
      "text": [
       "iteration 10\n",
-      "iteration 20\n",
-      "iteration 30\n",
-      "iteration 40\n",
-      "iteration 50\n",
-      "iteration 60\n",
-      "iteration 70\n",
-      "iteration 80\n",
-      "iteration 90\n",
-      "iteration 100\n",
-      "Trained in 64.12131404876709 s\n",
-      "           Topic_1               Topic_2  ...        Topic_24          Topic_25\n",
-      "0   0.0240 percent         0.0623 states  ...     0.0245 play     0.0129 public\n",
-      "1      0.0197 rate       0.0546 american  ...     0.0241 team     0.0093 change\n",
-      "2  0.0159 increase        0.0426 country  ...     0.0240 game      0.0091 issue\n",
-      "3      0.0155 rise          0.0236 world  ...   0.0190 player      0.0084 power\n",
-      "4   0.0133 economy      0.0150 americans  ...   0.0164 season     0.0078 policy\n",
-      "5    0.0123 report  0.0135 international  ...    0.0140 point  0.0069 political\n",
-      "6       0.0113 low        0.0133 foreign  ...      0.0135 win    0.0062 problem\n",
-      "7  0.0111 economic         0.0098 nation  ...    0.0116 coach     0.0057 system\n",
-      "8    0.0102 growth       0.0098 european  ...   0.0097 second    0.0056 believe\n",
-      "9   0.0085 decline          0.0093 trade  ...  0.0088 victory       0.0047 view\n",
+      "Trained in 6402.601480484009 ms\n",
+      "            Topic_1            Topic_2  ...       Topic_24          Topic_25\n",
+      "0    0.0046 percent    0.0042 american  ...    0.0086 play      0.0044 issue\n",
+      "1     0.0042 market      0.0036 states  ...    0.0063 game    0.0044 country\n",
+      "2    0.0035 company       0.0035 group  ...    0.0055 team      0.0040 state\n",
+      "3      0.0035 large       0.0033 world  ...     0.0049 win     0.0037 states\n",
+      "4        0.0034 add      0.0033 change  ...  0.0045 player   0.0036 question\n",
+      "5      0.0033 price        0.0033 tell  ...  0.0042 second       0.0036 tell\n",
+      "6   0.0033 american         0.0032 man  ...    0.0035 turn  0.0036 political\n",
+      "7  0.0032 president        0.0029 home  ...   0.0034 point     0.0035 public\n",
+      "8     0.0031 states        0.0029 hold  ...   0.0032 score     0.0035 change\n",
+      "9   0.0031 business  0.0027 government  ...  0.0032 season      0.0034 place\n",
       "\n",
       "[10 rows x 25 columns]\n"
      ]
     }
    ],
    "source": [
-    "!python ./serial_sqr.py"
+    "!python ./src/serial_sqr.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "8b411763-57e4-4638-8002-6ed72da42f88",
    "metadata": {},
    "outputs": [
@@ -85,33 +76,25 @@
      "output_type": "stream",
      "text": [
       "iteration 10\n",
-      "iteration 20\n",
-      "iteration 30\n",
-      "iteration 40\n",
-      "iteration 50\n",
-      "iteration 60\n",
-      "iteration 70\n",
-      "iteration 80\n",
-      "iteration 90\n",
-      "iteration 100\n",
-      "           Topic_1               Topic_2  ...        Topic_24          Topic_25\n",
-      "0   0.0240 percent         0.0623 states  ...     0.0245 play     0.0129 public\n",
-      "1      0.0197 rate       0.0546 american  ...     0.0241 team     0.0093 change\n",
-      "2  0.0159 increase        0.0426 country  ...     0.0240 game      0.0091 issue\n",
-      "3      0.0155 rise          0.0236 world  ...   0.0190 player      0.0084 power\n",
-      "4   0.0133 economy      0.0150 americans  ...   0.0164 season     0.0078 policy\n",
-      "5    0.0123 report  0.0135 international  ...    0.0140 point  0.0069 political\n",
-      "6       0.0113 low        0.0133 foreign  ...      0.0135 win    0.0062 problem\n",
-      "7  0.0111 economic         0.0098 nation  ...    0.0116 coach     0.0057 system\n",
-      "8    0.0102 growth       0.0098 european  ...   0.0097 second    0.0056 believe\n",
-      "9   0.0085 decline          0.0093 trade  ...  0.0088 victory       0.0047 view\n",
+      "Trained in 16130.309104919434 ms\n",
+      "            Topic_1          Topic_2  ...       Topic_24         Topic_25\n",
+      "0    0.0045 percent     0.0037 group  ...    0.0107 play   0.0039 country\n",
+      "1    0.0041 company  0.0036 american  ...    0.0072 game     0.0039 state\n",
+      "2  0.0040 president    0.0034 states  ...    0.0057 team    0.0038 states\n",
+      "3     0.0035 market    0.0034 change  ...  0.0056 second     0.0037 issue\n",
+      "4        0.0032 add      0.0032 plan  ...     0.0052 win      0.0035 tell\n",
+      "5      0.0032 large     0.0031 world  ...   0.0049 score  0.0034 official\n",
+      "6   0.0031 business   0.0030 program  ...   0.0046 night       0.0034 man\n",
+      "7    0.0031 receive      0.0029 tell  ...  0.0046 player  0.0034 question\n",
+      "8     0.0031 states      0.0029 hold  ...   0.0042 point     0.0033 place\n",
+      "9     0.0030 number    0.0028 member  ...  0.0041 season      0.0032 case\n",
       "\n",
       "[10 rows x 25 columns]\n"
      ]
     }
    ],
    "source": [
-    "!python ./serial_sqr.py"
+    "!python ./src/serial_div.py"
    ]
   },
   {
@@ -120,14 +103,65 @@
    "id": "19bc1a27-0e9b-44f5-aa42-0ffd39b060aa",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from utils.context import Context\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "BLOCK_SIZE = 32\n",
+    "context = Context(BLOCK_SIZE)\n",
+    "\n",
+    "matrix_multiplication_kernel_path = './kernels/NMF.cu'\n",
+    "# matrix_multiplication = context.getSourceModule(matrix_multiplication_kernel_path).get_function('MatMul')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bdfe48e8-32b4-48b0-bb62-dd0b73351e9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.data_utils import get_matrices\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6120cb33-826c-447a-b534-8f83cce75322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, W, H = get_matrices(67)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50169484-dbbd-4857-a137-e6ee268a430b",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "cudaEnv",
    "language": "python",
-   "name": "python3"
+   "name": "cudaenv"
   },
   "language_info": {
    "codemirror_mode": {
