--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4d1b863d-ca31-4877-b4a6-2ad7a86795db",
+   "id": "af571e11",
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "796103ae-8ede-4985-89ac-649c42eba9c6",
+   "id": "4b89ceae",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "8b411763-57e4-4638-8002-6ed72da42f88",
+   "id": "02fedb38",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19bc1a27-0e9b-44f5-aa42-0ffd39b060aa",
+   "id": "346da760",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "bdfe48e8-32b4-48b0-bb62-dd0b73351e9c",
+   "id": "afcfc4c6",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "6120cb33-826c-447a-b534-8f83cce75322",
+   "id": "b4bf3b13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,17 +151,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50169484-dbbd-4857-a137-e6ee268a430b",
+   "id": "952ab2a4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cudaEnv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "cudaenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
