--- a/Measurement.ipynb
+++ b/Measurement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3917b7f2-820a-492f-970b-37d91e56f1f4",
+   "id": "2402a097",
    "metadata": {},
    "source": [
     "# Notebook for Performing Execution Time Experiments"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bb0493ed-b4ce-4104-9a9d-a9e669e6e822",
+   "id": "7bce657b",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d3f67c-d343-4780-b6e4-5f5569e93055",
+   "id": "a38a5af5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31b314bb-28d2-4947-b803-ed1b9c3b6d6b",
+   "id": "b5d9b617",
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0570ea66-fac7-4f70-a08b-8d1f040e1ff7",
+   "id": "b475a869",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -805,9 +805,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cudaEnv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "cudaenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -819,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
